# fxfsp

./: .gitignore  Cargo.toml  README.md  bench_merge.sh  flake.nix
examples/: sample.rs
src/: api.rs  error.rs  lib.rs  orchestrator.rs  reader.rs  scan.rs  scan_common.rs  staged.rs  tree_scan.rs
src/io/: aligned_buf.rs  engine.rs  mod.rs  platform.rs  reader.rs
src/xfs/: ag.rs  bmbt.rs  btree.rs  extent.rs  inode.rs  mod.rs  superblock.rs  types.rs
src/xfs/dir/: block.rs  mod.rs  shortform.rs
tests/: scan_fixture.rs
